# cosmeye

./: .gitignore  CMakeLists.txt
src/: cosmeye.c  map-clear.txt
